# counter-validator

./: .coveragerc  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  README.rst  celery_devel.sh  celerybeat_devel.sh  manage.py  pyproject.toml  pytest.ini
.cursor/rules/: code-structure.mdc  testing.mdc
.gitlab/: Dockerfile  build-vue.yml  image-howto.md  pre-commit.yml  run-tests.yml
apps/: conftest.py
apps/core/: account.py  admin.py  apps.py  changelog.py  exceptions.py  fake_data.py  middleware.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  throttling.py  urls.py  version.py  views.py
apps/core/classes/: registry.py  storage.py
apps/core/management/commands/: download_registry.py
apps/core/migrations/: 0001_initial.py  0002_user_is_validator_admin.py  0002_validation_validation_result.py  0003_user_receive_operator_emails.py
apps/core/templates/core/: daily_validation_report.html  daily_validation_report.txt
apps/core/templates/registration/: invitation_email.html  invitation_subject.txt  password_reset_message.html  password_reset_subject.txt
apps/core/tests/: conftest.py  fake_data.py  test_api.py  test_libs.py  test_models.py  test_registry.py  test_tasks.py  test_validation.py
apps/core/tests/test_data/: platform1.json
apps/core/tests/test_data/sushi_service/: 5b4b3f8c-6f6b-476d-8891-b0e8bef75af8.json  ef1cba68-395b-45cd-8331-cf59e40f9ecd.json
apps/counter/: fake_data.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/counter/classes/: registry.py
apps/counter/logic/: dates.py
apps/counter/management/commands/: download_registry.py
apps/counter/migrations/: 0001_initial.py  0002_alter_platform_options.py
apps/counter/tests/: test_api.py  test_registry.py
apps/validations/: admin.py  celery_queue.py  enums.py  export.py  fake_data.py  filters.py  hashing.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  validation_module_api.py  validation_modules.py  views.py
apps/validations/management/commands/: check_worker_modules.py  export_validation.py
apps/validations/migrations/: 0001_initial.py  0002_validationcore_error_message.py  0003_counterapivalidation.py  0003_remove_validation_api_key_validation_api_key_prefix.py  0004_remove_validation_api_key_prefix_and_more.py  0005_counterapivalidation.py  0006_validationmessage.py  0007_alter_counterapivalidation_requested_begin_date_and_more.py  0008_alter_validationcore_validation_result_and_more.py  0009_validationcore_expiration_date.py  0010_remove_counterapivalidation_api_endpoint_and_more.py  0011_validation_public_id.py  0012_remove_validationcore_platform_and_more.py  0013_alter_validation_public_id.py  0014_alter_validationcore_api_endpoint.py  0015_validationcore_user.py  0016_counterapivalidation_use_short_dates.py  0017_alter_counterapivalidation_credentials.py  0018_alter_validationcore_report_code.py
apps/validations/tests/: test_celery_api.py  test_celery_queue.py  test_export.py  test_models.py  test_serializers.py  test_tasks.py  test_validation.py  test_validation_api.py  test_validation_core_api.py
config/: __init__.py  celery_conf.py  urls.py
config/settings/: base.py  devel.py  test.py
docs/: api.rst  conf.py  development.rst  index.rst  own-instance.rst  user.rst
frontend/: .eslintrc-auto-import.json  .gitignore  .prettierrc.js  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.mts
frontend/src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  typed-router.d.ts  vite-env.d.ts
frontend/src/components/: ApiKeyCreate.vue  ApiKeyRevoke.vue  ApiKeyTable.vue  BarChart.vue  ChangePassword.vue  ChangelogWidget.vue  DateTooltip.vue  DeleteAccountButton.vue  DoughnutChart.vue  FilePicker.vue  FileUpload.vue  FileUploader.vue  IsoDateTime.vue  LoginDialog.vue  LoginPage.vue  MonthPicker.vue  MonthRangePicker.vue  MsgDialog.vue  NewCounterAPIValidation.vue  NewFileValidation.vue  NewSushiValidation.vue  PasswordResetWidget.vue  README.md  RequestPasswordResetDialog.vue  SeverityLevelChip.vue  ShortenText.vue  SignupDialog.vue  SimplePie.vue  SplitStatsVisualization.vue  StatsCard.vue  StatsChip.vue  StatsPie.vue  StatsTableSimple.vue  TextFieldWithColorHint.vue  TextTooltip.vue  UserEditWidget.vue  UserForm.vue  UserName.vue  UserTable.vue  ValidationBasicInfo.vue  (+11 more)
frontend/src/composables/: paginatedAPI.ts  usePaginationWithMemory.ts  validationFiltering.ts
frontend/src/layouts/: default.vue  public.vue
frontend/src/lib/: datetime.ts  formRules.ts  formatting.ts  login.ts  options.ts  vuetifyTypes.ts
frontend/src/lib/definitions/: ApiKey.ts  User.ts  ValidationFile.ts  VueError.ts  api.ts  counter.ts  notifications.ts  upload.ts
frontend/src/lib/http/: auth.ts  message.ts  platform.ts  users.ts  util.ts  validation.ts
frontend/src/pages/: [...path].vue  about.vue  accept-invitation.vue  changelog.vue  history.vue  index.vue  login.vue  monitoring.vue  register.vue  reset-password.vue  settings.vue  stats.vue  verify-email.vue
frontend/src/pages/admin/: users.vue
frontend/src/pages/public/: [public_id].vue
frontend/src/pages/validation/: [id].vue  [path].vue  admin.vue  api.vue  file.vue  index.vue  new.vue  sushi.vue
frontend/src/plugins/: index.ts  vuetify.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  version.ts
frontend/src/styles/: settings.scss
test_data/reports/: 50-Sample-TR.csv
test_data/sushi_service/: 21f2d1ed-76fe-4ecc-b939-83209f3de125.json
test_data/validation_results/: errors.json  module-error.json  ok-result.json  test1.json
tools/: utils.py  validate_counter_api.py  validate_file.py
(+1 files in other folders)
