[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "counter-validation-tool"
version = "0.6.4"
description = ""
authors = [
    "Beda Kosata <beda@bigdigdata.com>",
    "Jakub Smetana <jakub.smetana@protonmail.com>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.5.2"
colorlog = "^6.8.2"
dj-rest-auth = { extras = ["with-social"], version = "7.0.1" }
django = "^5.2.1"
# allauth >= 65 uses different settings (not documented on RTD), so we stick with 64.2.1
django-allauth = "64.2.1"
django-anymail = "^13.0"
django-celery-results = "^2.6.0"
django-redis = "^5.4.0"
django-silk = "^5.3.1"
djangorestframework = "^3.16.0"
djangorestframework-api-key = "^3.1.0"
drf-nested-routers = "^0.94.1"
lz4 = "^4.4.4"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
python-magic = "^0.4.27"
redis = "^6.1.0"
requests = "^2.32.3"
requests-mock = "^1.12.1"
sphinx = "^8.2.3"
tailslide = "^0.2.0"
termcolor = "^3.1.0"
uuid6 = "^2024.7.10"
xlsxwriter = "^3.2.2"

[tool.poetry.group.dev.dependencies]
dj-inmemorystorage = "^2.1.0"
django-debug-toolbar = "^5.2.0"
factory-boy = "^3.3.1"
pre-commit = "^4.0.1"
pytest = "^8.3.2"
pytest-cov = "^6.1.1"
pytest-django = "^4.8.0"
ruff = "^0.11.9"
watchdog = { version = "^6.0.0", extras = ["watchmedo"] }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.devel"
python_files = "tests.py test_*.py"
addopts = "--reuse-db"

[tool.ruff]
line-length = 100
lint.ignore = [
    "ISC001", # warns about not working with the formatter
]
lint.select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "DJ", # flake8-django
    "E",  # pycodestyle - errors
    "F",  # pyflakes
    # "FIX", # flake8-fixme
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade (simplify)
    "W",   # pycodestyle - warnings
]
target-version = "py310"

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B011"]               # test files should have asserts
"apps/*/migrations/**.py" = ["E501"]
